<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/form_title"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/avatar_description"
        android:src="@drawable/ic_avatar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_input_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="phone"
                android:hint="@string/phone_number_input_hint"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email_input_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gender_input_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/gender_input_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <RadioButton
                    android:id="@+id/gender_input_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/primary"
                    android:text="@string/gender_input_male_text" />

                <RadioButton
                    android:id="@+id/gender_input_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/primary"
                    android:text="@string/gender_input_female_text" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/class_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/class_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/classes"
                android:paddingVertical="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/club_and_activity_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/club_and_activity_value_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/club_and_activity_value_1_text" />

            <CheckBox
                android:id="@+id/club_and_activity_value_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/club_and_activity_value_2_text" />

            <CheckBox
                android:id="@+id/club_and_activity_value_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/club_and_activity_value_3_text" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:backgroundTint="@color/primary"
                android:text="@string/save"
                android:textAllCaps="true" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>