<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="320dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email_input_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/submit"
                android:textAllCaps="true" />
        </LinearLayout>
</ScrollView>