<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/contact_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/contact_icon_description"
            android:src="@drawable/ic_contact" />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@+id/contact_avatar"
            android:fontFamily="sans-serif-black"
            android:text="@string/contact_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contact_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_name"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/contact_avatar"
            android:fontFamily="sans-serif"
            android:text="@string/contact_phone_number"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/contact_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/contact_status"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>